--- a/backened/package.json
+++ b/backened/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22",
     "stripe": "^12.11.0"
-  }
+  },
+  "engines": {
+    "node": ">=NODE_JS_VERSION"
+}
 }
